--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /contactless-tls/nbproject/private/
 /nbproject/private/
 nbproject/private/private.properties
+lib-cltls/nbproject/private/private.properties
+lib-cltls/nbproject/private/private.xml
