--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 nbproject/private/private.properties
 lib-cltls/nbproject/private/private.properties
 lib-cltls/nbproject/private/private.xml
+/card-drivers/demo-card/nbproject/private/
