--- a/card-drivers/demo-card/nbproject/project.properties
+++ b/card-drivers/demo-card/nbproject/project.properties
@@ -27,9 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/demo-card.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.core-1.51.0.0.jar=..\\..\\libs\\core-1.51.0.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.core-1.51.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
