--- a/card-drivers/demo-card/nbproject/project.properties
+++ b/card-drivers/demo-card/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=demo-card
+application.vendor=John
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,12 +27,15 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/demo-card.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
 file.reference.core-1.51.0.0.jar=..\\..\\libs\\core-1.51.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.core-1.51.0.0.jar}
+    ${file.reference.core-1.51.0.0.jar}:\
+    ${file.reference.contactless-tls.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
