--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ lib-cltls/nbproject/private/private.xml
 /lib-cltls/nbproject/private/
 /lib-cltls/build/
 /lib-cltls/dist/
+/card-drivers/smartcardio-sample/nbproject/private/
