--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ lib-cltls/nbproject/private/private.xml
 /card-drivers/smartcardio-sample/nbproject/private/
 /usage-samples/smartcardio-sample/nbproject/private/
 usage-samples/smartcardio-sample/nbproject/private/private.properties
+docs/~$Diag2.docx
