--- a/usage-samples/smartcardio-sample/nbproject/project.properties
+++ b/usage-samples/smartcardio-sample/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=smartcardio-sample
+application.vendor=John
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,17 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/smartcardio-sample.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.anycardscio.jar=../../card-drivers/anycardscio/dist/anycardscio.jar
+file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
+file.reference.core-1.51.0.0.jar=../../libs/core-1.51.0.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.core-1.51.0.0.jar}:\
+    ${file.reference.contactless-tls.jar}:\
+    ${file.reference.anycardscio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -53,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=smartcardio.sample.SmartcardioSample
+main.class=com.microexpert.cltls.samples.desktopsample.DesktopClient
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
