--- a/card-drivers/anycardscio/nbproject/project.properties
+++ b/card-drivers/anycardscio/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=demo-card
+application.title=anycardscio
 application.vendor=John
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,12 +25,12 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/demo-card.jar
+dist.jar=${dist.dir}/anycardscio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
-file.reference.core-1.51.0.0.jar=..\\..\\libs\\core-1.51.0.0.jar
+file.reference.core-1.51.0.0.jar=../../libs/core-1.51.0.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
