--- a/usage-samples/smartcardio-sample/nbproject/project.properties
+++ b/usage-samples/smartcardio-sample/nbproject/project.properties
@@ -29,15 +29,15 @@ dist.jar=${dist.dir}/smartcardio-sample.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.anycardscio.jar=../../card-drivers/anycardscio/dist/anycardscio.jar
 file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
 file.reference.core-1.51.0.0.jar=../../libs/core-1.51.0.0.jar
+file.reference.softcard.jar=../../card-drivers/softcard/dist/softcard.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.core-1.51.0.0.jar}:\
     ${file.reference.contactless-tls.jar}:\
-    ${file.reference.anycardscio.jar}
+    ${file.reference.softcard.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
