--- a/usage-samples/smartcardio-sample/nbproject/project.properties
+++ b/usage-samples/smartcardio-sample/nbproject/project.properties
@@ -31,13 +31,15 @@ endorsed.classpath=
 excludes=
 file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
 file.reference.core-1.51.0.0.jar=../../libs/core-1.51.0.0.jar
+file.reference.mxkeyscio.jar=../../card-drivers/mxkeyscio.jar
 file.reference.softcard.jar=../../card-drivers/softcard/dist/softcard.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.core-1.51.0.0.jar}:\
     ${file.reference.contactless-tls.jar}:\
-    ${file.reference.softcard.jar}
+    ${file.reference.softcard.jar}:\
+    ${file.reference.mxkeyscio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
