build renamed from mx to micro

--- a/usage-samples/smartcardio-sample/nbproject/project.properties
+++ b/usage-samples/smartcardio-sample/nbproject/project.properties
@@ -31,7 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.contactless-tls.jar=../../lib-cltls/dist/contactless-tls.jar
 file.reference.core-1.51.0.0.jar=../../libs/core-1.51.0.0.jar
-file.reference.mxkeyscio.jar=../../card-drivers/mxkeyscio.jar
+file.reference.microkeyscio.jar=../../card-drivers/microkeyscio.jar
 file.reference.softcard.jar=../../card-drivers/softcard/dist/softcard.jar
 includes=**
 jar.compress=false
@@ -39,7 +39,7 @@ javac.classpath=\
     ${file.reference.core-1.51.0.0.jar}:\
     ${file.reference.contactless-tls.jar}:\
     ${file.reference.softcard.jar}:\
-    ${file.reference.mxkeyscio.jar}
+    ${file.reference.microkeyscio.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
